# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
# MODULE.bazel
"""
Time Synchronization: Timesync-Daemon, Timesync-Library and PTP-Daemon
"""

module(
    name = "score-timesync",
    version = "0.0.1",
    compatibility_level = 1,
)

# For ecucfgdsl_processor.sh
bazel_dep(name = "rules_sh", version = "0.5.0")

# For docs
bazel_dep(name = "rules_python", version = "1.4.1")
PYTHON_VERSION = "3.12"
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Add GoogleTest dependency
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "flatbuffers", version = "25.2.10")

# Eclipse S-CORE
bazel_dep(name = "score_baselibs", version = "0.2.2")

# tooling
bazel_dep(name = "score_tooling", version = "1.0.4")
bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

#docs-as-code
bazel_dep(name = "score_docs_as_code", version = "2.2.0")
# To reference process requirements
bazel_dep(name = "score_process", version = "1.4.0")
